# zerotape

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build-riscos.sh  build.sh  test.zt
.github/workflows/: ci.yml
apps/zerotape-demo/: demo.c
apps/zerotape-tests/: tests.c
cmake/: riscos.cmake
include/zerotape/: zerotape.h
libraries/fortify/: CMakeLists.txt
libraries/lemon/: CMakeLists.txt  lemon.c
libraries/zerotape/: CMakeLists.txt  zt-ast-impl.h  zt-ast-viz.c  zt-ast-walk.c  zt-ast.c  zt-ast.h  zt-driver.c  zt-driver.h  zt-gram.y  zt-gramx.h  zt-lex-impl.h  zt-lex-test.c  zt-lex-test.h  zt-lex.c  zt-lex.h  zt-load.c  zt-parser.c  zt-parser.h  zt-run.c  zt-run.h  zt-save.c  zt-slab-alloc.c  zt-slab-alloc.h  zt-walk.c  zt-walk.h
platform/generic/: CMakeLists.txt
platform/riscos/: Makefile,fe1
